// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<button
  className="primary"
  onClick={[MockFunction]}
  type="button"
>
  None Provided
</button>
`;

exports[`Button when fontSize prop is 14 renders correctly 1`] = `
<button
  className="primary"
  onClick={[MockFunction]}
  type="button"
>
  None Provided
</button>
`;

exports[`Button when fullWidth prop is true renders correctly 1`] = `
<button
  className="primary fullWidth"
  onClick={[MockFunction]}
  type="button"
>
  None Provided
</button>
`;

exports[`Button when submitsForm prop is true renders correctly 1`] = `
<button
  className="primary"
  onClick={[MockFunction]}
  type="submit"
>
  None Provided
</button>
`;

exports[`Button when text prop is Example Text renders correctly 1`] = `
<button
  className="primary"
  onClick={[MockFunction]}
  type="button"
>
  Example Text
</button>
`;

exports[`Button when type prop is link renders correctly 1`] = `
<a
  className="primary"
  href="/"
  rel="noopener noreferrer"
  target="_blank"
>
  None Provided
</a>
`;

exports[`Button when type prop is plain renders correctly 1`] = `
<button
  className="plain"
  onClick={[MockFunction]}
  type="button"
>
  None Provided
</button>
`;

exports[`Button when type prop is primary renders correctly 1`] = `
<button
  className="primary"
  onClick={[MockFunction]}
  type="button"
>
  None Provided
</button>
`;

exports[`Button when type prop is routedLink renders correctly 1`] = `
<button
  className="primary"
  onClick={[MockFunction]}
  type="button"
>
  None Provided
</button>
`;
